name:                graph-experiments
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shiyah/graph-experiments#readme
license:             BSD3
license-file:        LICENSE
author:              Cristian Yost
maintainer:          shiyah@theidio.tech
copyright:           2018 Cristian Yost
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:   src
  build-depends:    base          >=4.7 && <5
  exposed-modules:  Lib
  other-modules:
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Widentities
    -Wredundant-constraints

executable graph-experiments
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    graph-experiments
                  , base >=4.7 && <5
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Widentities
    -Wredundant-constraints
  default-language: Haskell2010
